k8s/filebrowser/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: file.manujkarki.com.np
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
